# Claude-PM

./: .env.example  01-subsegment-map.md  02-gap-research.md  03-market-sizing.md  04-competitive-map.md  05-discovery-brief.md  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
soti-compete/: .env.example  .gitignore  README.md  pyproject.toml
soti-compete/config/: competitors.yaml  routing.yaml  runtime.yaml  scoring.yaml  sources.yaml
soti-compete/scripts/: cron-daily.sh  github-actions.yml.tpl  healthcheck.sh
soti-compete/soti_compete/: bootstrap.py  classify.py  cli.py  config.py  dedup.py  healthcheck.py  jsonl.py  recency.py  scoring.py  time_utils.py
soti-compete/soti_compete/flows/: __init__.py  daily_scan.py  hourly_sweep.py  pastein.py  pipeline.py  sentiment_monthly.py
soti-compete/soti_compete/llm/: __init__.py  client.py  prompts.py  search.py
soti-compete/soti_compete/notify/: __init__.py  base.py  email_smtp.py  render.py  teams.py
soti-compete/soti_compete/storage/: __init__.py  base.py  sqlite.py
soti-compete/soti_compete/stubs/: __init__.py  gong.py  jira.py  salesforce.py
soti-compete/tests/: conftest.py  test_classify.py  test_config.py  test_dedup.py  test_e2e_smoke.py  test_flows.py  test_healthcheck.py  test_jsonl.py  test_llm_client.py  test_llm_prompts.py  test_llm_search.py  test_notify.py  test_recency.py  test_render.py  test_scoring.py  test_storage_sqlite.py  test_stubs.py
soti-compete/tests/fixtures/: daily_response.jsonl
src/: config.ts  index.ts  jira-client.ts
(+35 files in other folders)
