[project]
name = "soti-compete"
version = "0.1.0"
description = "Automated competitive intelligence pipeline for SOTI PM team"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.7",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.9",
    "jinja2>=3.1",
    "pymsteams>=0.2.2",
    "click>=8.1",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
soti-compete = "soti_compete.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soti_compete"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
